feat: classifier validation and class imbalance fix

--- a/NLP_Project.ipynb
+++ b/NLP_Project.ipynb
@@ -57,7 +57,8 @@
     "from torch.nn.utils.rnn import pad_sequence\n",
     "from datasets import load_dataset\n",
     "import sacrebleu\n",
-    "import os"
+    "import os\n",
+    "from imblearn.over_sampling import SMOTE"
    ]
   },
   {
@@ -275,10 +276,20 @@
     "    # Ensure no -1 labels\n",
     "    assert -1 not in train_targets, \"Found -1 labels in training data\"\n",
     "\n",
+    "    # To fix class imbalance\n",
+    "    smote = SMOTE(random_state=42)\n",
+    "    train_features, train_targets = smote.fit_resample(train_features, train_targets)\n",
+    "\n",
     "    # Train a logistic regression classifier\n",
     "    print(\"Training logistic regression model...\")\n",
     "    classifier = LogisticRegression(max_iter=5000)\n",
     "    classifier.fit(train_features, train_targets)\n",
+    "\n",
+    "    # Validate the classifier\n",
+    "    val_predictions = classifier.predict(val_features)\n",
+    "    print(\"Validation Accuracy:\", accuracy_score(val_targets, val_predictions))\n",
+    "    print(classification_report(val_targets, val_predictions))\n",
+    "\n",
     "\n",
     "    # Save the classifier's weights and biases\n",
     "    print(\"Saving the classifier's weights and biases...\")\n",
